--- a/index.html
+++ b/index.html
@@ -1,46 +1,219 @@
-
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blood Hairpin Studio - Short Drama AI Generator</title>
+    <title>DRAMA STUDIO - AI 短剧创作工坊</title>
     <link href="/css/tailwind.css" rel="stylesheet">
-    <link href="/fonts/inter.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --cinema-black: #030303;
+            --cinema-red: #c41e3a;
+            --cinema-amber: #f59e0b;
+            --cinema-white: #fafafa;
+        }
         body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-            background-color: #0a0a0a;
-            color: #e5e5e5;
+            font-family: 'Inter', sans-serif;
+            background: var(--cinema-black);
+            color: var(--cinema-white);
+            overflow-x: hidden;
         }
-        .custom-scrollbar::-webkit-scrollbar {
-            width: 4px;
+        .film-grain {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 9999;
+            opacity: 0.04;
+            background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
         }
-        .custom-scrollbar::-webkit-scrollbar-track {
-            background: #1a1a1a;
+        .light-leak {
+            position: fixed;
+            top: -60%;
+            left: -60%;
+            width: 220%;
+            height: 220%;
+            pointer-events: none;
+            z-index: 0;
+            background: radial-gradient(ellipse at 20% 30%, rgba(196,30,58,0.06) 0%, transparent 45%),
+                        radial-gradient(ellipse at 80% 70%, rgba(245,158,11,0.04) 0%, transparent 40%);
+            animation: lightLeakDrift 25s ease-in-out infinite;
         }
-        .custom-scrollbar::-webkit-scrollbar-thumb {
-            background: #404040;
-            border-radius: 10px;
+        @keyframes lightLeakDrift {
+            0%, 100% { transform: translate(0,0); opacity: 0.8; }
+            50% { transform: translate(2%, -2%); opacity: 0.6; }
         }
-        .glass-panel {
-            background: rgba(23, 23, 23, 0.8);
-            backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+        .main-title {
+            font-family: 'Playfair Display', serif;
+            font-size: clamp(2.5rem, 8vw, 5rem);
+            font-weight: 900;
+            letter-spacing: 0.08em;
+            background: linear-gradient(135deg, var(--cinema-white) 0%, var(--cinema-white) 50%, rgba(196,30,58,0.8) 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            filter: drop-shadow(0 0 40px rgba(196,30,58,0.3));
+        }
+        .main-title::after {
+            content: '';
+            display: block;
+            width: 120px;
+            height: 3px;
+            background: linear-gradient(90deg, transparent, var(--cinema-red), var(--cinema-amber), var(--cinema-red), transparent);
+            margin: 15px auto 0;
+            animation: titleLineGlow 3s ease-in-out infinite;
+        }
+        @keyframes titleLineGlow {
+            0%, 100% { opacity: 0.5; }
+            50% { opacity: 1; }
+        }
+        .subtitle {
+            font-size: clamp(0.9rem, 2vw, 1.1rem);
+            color: rgba(250,250,250,0.6);
+            letter-spacing: 0.4em;
+            text-transform: uppercase;
+            margin-top: 1.5rem;
+        }
+        .main-input {
+            width: 100%;
+            min-height: 160px;
+            padding: 1.5rem 2rem;
+            padding-right: 180px;
+            background: rgba(10,10,10,0.6);
+            border: 1px solid rgba(196,30,58,0.2);
+            border-radius: 16px;
+            color: var(--cinema-white);
+            font-size: 1rem;
+            line-height: 1.7;
+            resize: none;
+            transition: all 0.4s;
+            backdrop-filter: blur(20px);
+        }
+        .main-input:focus {
+            outline: none;
+            border-color: rgba(196,30,58,0.6);
+            box-shadow: 0 0 40px rgba(196,30,58,0.15), inset 0 0 30px rgba(196,30,58,0.03);
+            background: rgba(10,10,10,0.8);
+        }
+        .generate-btn {
+            position: absolute;
+            right: 12px;
+            bottom: 12px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 14px 28px;
+            background: linear-gradient(135deg, var(--cinema-red) 0%, #8b1528 100%);
+            border: none;
+            border-radius: 12px;
+            color: white;
+            font-size: 0.95rem;
+            font-weight: 600;
+            letter-spacing: 0.05em;
+            cursor: pointer;
+            transition: all 0.4s;
+        }
+        .generate-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 15px 40px rgba(196,30,58,0.4);
+        }
+        .generate-btn:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+        }
+        .reel {
+            width: 22px;
+            height: 22px;
+            border: 2.5px solid rgba(255,255,255,0.8);
+            border-radius: 50%;
+            position: relative;
+            animation: reelSpin 2s linear infinite;
+        }
+        .reel::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 8px;
+            height: 8px;
+            background: rgba(255,255,255,0.9);
+            border-radius: 50%;
+        }
+        .reel::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 16px;
+            height: 16px;
+            border: 1.5px dashed rgba(255,255,255,0.5);
+            border-radius: 50%;
+            animation: reelSpinReverse 4s linear infinite;
+        }
+        @keyframes reelSpin { to { transform: rotate(360deg); } }
+        @keyframes reelSpinReverse { to { transform: translate(-50%, -50%) rotate(0deg); } }
+        .phase-tab {
+            position: relative;
+            padding: 12px 32px;
+            background: transparent;
+            border: 1px solid rgba(196,30,58,0.3);
+            border-radius: 50px;
+            color: rgba(250,250,250,0.5);
+            font-size: 0.9rem;
+            font-weight: 500;
+            letter-spacing: 0.1em;
+            text-transform: uppercase;
+            cursor: pointer;
+            transition: all 0.4s;
+        }
+        .phase-tab:hover {
+            color: var(--cinema-white);
+            border-color: rgba(196,30,58,0.6);
+        }
+        .phase-tab.active {
+            background: rgba(196,30,58,0.15);
+            border-color: var(--cinema-red);
+            color: var(--cinema-red);
+        }
+        .script-card {
+            background: rgba(10,10,10,0.6);
+            border: 1px solid rgba(196,30,58,0.2);
+            border-radius: 20px;
+            padding: 2.5rem;
+            backdrop-filter: blur(20px);
+        }
+        .scene-card {
+            background: rgba(10,10,10,0.6);
+            border: 1px solid rgba(196,30,58,0.2);
+            border-radius: 16px;
+            overflow: hidden;
+            transition: all 0.5s;
+        }
+        .scene-card:hover {
+            transform: translateY(-5px);
+            border-color: rgba(196,30,58,0.5);
+        }
+        .scene-card img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+        }
+        .footer {
+            text-align: center;
+            padding: 3rem 2rem;
+            color: rgba(250,250,250,0.3);
+            font-size: 0.85rem;
         }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3"
-  }
-}
-</script>
 </head>
 <body>
+    <div class="film-grain"></div>
+    <div class="light-leak"></div>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
